--- a/.github/workflows/merge-content-to-project.yml
+++ b/.github/workflows/merge-content-to-project.yml
@@ -12,8 +12,11 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
       - name: Check out code into the Go module directory
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       
       - name: "Release with semantic-release"
         run: npx semantic-release --debug
