--- a/.github/workflows/merge-content-to-project.yml
+++ b/.github/workflows/merge-content-to-project.yml
@@ -21,5 +21,7 @@ jobs:
       - name: "Release with semantic-release"
         run: npx semantic-release --debug
         env:
-          # GitHub sets this automatically
-          GITHUB_TOKEN: ${{ secrets.RELEASE_GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  
+permissions:
+  contents: write
