--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -1,5 +1,3 @@
-# Based on https://github.com/leonsteinhaeuser/project-beta-automations
-
 name: "Creating version with semantic release on merging Issues/PRs"
 
 on:
@@ -7,7 +5,7 @@ on:
     branches: [master]
 
 jobs:
-  merge-content-to-project:
+  semantic-release:
     name: "Add Content to project"
     runs-on: ubuntu-latest
     
