--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-.envs
-
 *.dll
 *.exe
 .DS_Store
@@ -36,9 +34,13 @@ website/vendor
 *.winfile eol=crlf
 
 .env
+.envs
 **/.terraform.lock.hcl
 
 /examples/resources/schema_migrations/**
+
+# setup
+Brewfile.lock.json
 
 # local files
 .access
