--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,9 +12,9 @@
 name: release
 on:
   workflow_dispatch:
-  push:
-    tags:
-      - 'v*'
+  release:
+    types:
+      - published
 permissions:
   contents: write
 jobs:
@@ -30,7 +30,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version-file: 'go.mod'
+          go-version-file: "go.mod"
           cache: true
 
       - name: Import GPG key
